<resources>
    <string name="app_name"><b>m<font color='#FF0000'>-</font>Billing</b></string>
    <string name="open_drawer">OPEN DRAWER</string>
    <string name="close_drawer">CLOSE DRAWER</string>
    <string name="msg_perms_needed">The app can not work properly without having all these permissions.</string>
    <string name="btn_quit">Quit</string>
    <string name="btn_accept">Accept</string>
    <string name="forgot_pass"><u>Forgot Password?</u></string>
    <string name="register"><u>Register Now !</u></string>
    <string name="msg"><b>m<font color='#FF0000'>-</font>Billing: Smart Accounting For Mobile Dealer</b></string>
    <string name="msg_send_otp">"Enter your Mobile Number and we'll send you an OTP"\nto change your password.</string>
    <string-array name="days_of_week">
        <item>Beryl Systems</item>
    </string-array>
    <string-array name="package_arr">
        <item>Basic</item>
        <item>Standard</item>
        <item>Enterprise</item>
    </string-array>
    <string-array name="country">
        <item>India</item>
    </string-array>
    <string-array name="symbol">
        <item>Rs</item>
    </string-array>
    <string-array name="currencystring">
        <item>Rupees</item>
    </string-array>
    <string-array name="currencysubstring">
        <item>Paisa</item>
    </string-array>
    <string-array name="dealer">
        <item>Regular</item>
        <item>Composition</item>
    </string-array>


    <string-array name="state">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Punjab</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="setting_array">
        <item>No</item>
        <item>Yes</item>
    </string-array>

    <string-array name="type_of_dealer">
        <item>Registered</item>
        <item>Un-Registered</item>
        <item>Composition</item>
        <item>UIN Holder</item>
    </string-array>

    <string-array name="array_more_option">
        <item>Main Unit</item>
        <item>Alternate Unit</item>
        <item>Not Required</item>
    </string-array>
    <string-array name="array_default_unit">
        <item>Not Req.</item>
        <item>Main Unit</item>
        <item>Alt. Unit</item>
        <item>Pckg. Unit</item>
    </string-array>
    <string-array name="business_type">
        <item>Mobile Dealer</item>
        <item>Electronics Dealer &amp; Others</item>
    </string-array>
    <string-array name="item_price">
        <item>Main Unit</item>
        <item>Alternate Unit</item>
        <item>Both Unit</item>
    </string-array>
    <string-array name="array_text_category">
        <item>Text Category</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="primary_group">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="primary_group_cost">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string-array name="bill_by_bill_balancing">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="type_of_dealer_account">
        <item>Registered</item>
        <item>Unregistered</item>
        <item>Composition</item>
        <item>UIN Holder</item>
    </string-array>
    <string-array name="bill_sundry_type">
        <item>Additive</item>
        <item>Subtractive</item>
    </string-array>
    <string-array name="reasons">
        <item>01-Sales/Purc. Return</item>
        <item>02-Post Sale/Purc. Discount</item>
        <item>03-Deficiency in Services</item>
        <item>04-Correction in Invoice</item>
        <item>05-Change in POS</item>
        <item>06-Finalization of Provisional Assessment</item>
        <item>07-Others</item>
    </string-array>
    <string-array name="bill_sundry_nature">
        <item>CGST</item>
        <item>SGST</item>
        <item>IGST</item>
    </string-array>
    <string-array name="uqc">
        <item>BAG-BAGS</item>
        <item>BAL-BALE</item>
        <item>BDL-BUNDLES</item>
        <item>BOX-BOXr</item>
    </string-array>
    <string-array name="item_con_type">
        <item>Gms/Kg</item>
        <item>Kg/Gms</item>
    </string-array>
    <string-array name="round_off_spinner">
        <item>Upper Limit</item>
        <item>Lower Limit</item>
        <item>Automatic</item>
    </string-array>
    <string-array name="bill_sundry">
        <item>Upper Limit</item>
        <item>Lower Limit</item>
        <item>Automatic</item>
    </string-array>
    <string-array name="specify_in">
        <item>Specify Acc. Here</item>
        <item>Specify Acc. in Voucher</item>
    </string-array>
    <string-array name="pdc_regular">
        <item>Regular</item>
        <item>PDC</item>
    </string-array>
    <string-array name="gst_nature_purchase">
        <item>Input Goods/Services</item>
        <item>Input Services</item>
        <item>Capital Goods/Services</item>
        <item>None</item>
    </string-array>
    <string-array name="gst_nature_payment">
        <item>Not Applicable non Gst</item>
        <item>Rcm/Unreg. Expense</item>
        <item>Registered Expenses (B2B)</item>
        <item>Tax Paid Expense (B2C)</item>
        <item>Exempt Expense</item>
        <item>Composition Expense</item>
        <item>Refund Against Advance Receipt</item>
        <item>GST Payment to Government</item>
    </string-array>
    <string-array name="gst_nature_journal_voucher">
        <item>Not Applicable non Gst</item>
        <item>Rcm/Unreg. Expense/Consolidated RCM Payable</item>
        <item>Registered Expenses (B2B)</item>
        <item>Tax Paid Expense (B2C)</item>
        <item>Exempt Expense</item>
        <item>Composition Expense</item>
        <item>Cr. Note Received Against Purchase</item>
        <item>Dr. Note Issued Against Sale</item>
        <item>GST Tax Adjustments</item>
        <item>GST Payment to Government</item>
    </string-array>
    <string-array name="gst_nature_receipt">
        <item>Not Applicable</item>
        <item>Advance Receipt</item>
    </string-array>
    <string-array name="gst_nature_credit">
        <item>Not Applicable</item>
        <item>Dr. Note Issued Against Sale</item>
        <item>Cr. Note Received Against Purchase</item>
    </string-array>
    <string-array name="gst_nature_debit">
        <item>Not Applicable</item>
        <item>Cr. Note Issued Against Sale</item>
        <item>Dr. Note Received Against Purchase</item>
    </string-array>
    <string-array name="main">
        <item>Main</item>
    </string-array>
    <string-array name="dashboard_spinner">
        <item>7 Days</item>
    </string-array>

    <string-array name="vehicle">
        <item>Road</item>
        <item>Air</item>
        <item>Rail</item>
        <item>Ship</item>
    </string-array>

    <string name="err_invalid_pwd_format">Password Minimum 6 Alphanumeric Characters</string>
    <string name="zipcode">Enter zip code</string>
    <string name="err_invalid_mobile">Invalid Mobile Number</string>
    <string name="err_invalid_email">Invalid Email</string>
    <string name="err_invalid_name">Invalid Name</string>
    <string name="err_otp">Invalid OTP</string>
    <string name="err_password">Password doesnt matches</string>
    <string name="forgotPassword"><u>Forgot Password ?</u></string>
    <string name="Resend"><u>Resend OTP</u></string>
    <string name="change_phone_number"><u>Change Mobile Number</u></string>
    <string name="dialog_titel_logout">Log out</string>
    <string name="dialog_msg_logout">Are you sure?</string>
    <string name="btn_ok">OK</string>
    <string name="btn_yes">YES</string>
    <string name="btn_no">NO</string>
    <string name="btn_send_email"> Do you want to send email ?</string>
    <string name="btn_connect_printer"> Do you want to connect printer ?</string>
    <string name="btn_print_preview">Print/Preview</string>
    <string name="print_preview_mesage">Please select</string>
    <string name="btn_cancel">Cancel</string>
    <string name="call_us">Please call us on this number: +917015860006</string>
    <string name="click_me">Call</string>
    <string name="FB_APP_ID">247748645750878</string>
    <string name="enable_gps">To get exact location it is better to enable GPS</string>
    <string name="ok">Ok</string>
    <string name="enable_location">To use this app you need to enable location first</string>
    <string name="get_started"><u>Get Started</u></string>
    <string name="appname"><u>BAHI KHATA</u></string>
    <string name="page3_subtitle">A Complete Accounting Software On Mobile/Easy-to-use Specially For Mobile-Retailer</string>
    <string name="title_activity_create_sale">CreateSaleActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_create_purchase">CreatePurchaseActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_create_sale_type">CreateSaleTypeActivity</string>
    <string name="indian_rupee_symbol">\u20B9</string>
    <string name="m_billing"><b>m<font color='#FF0000'>-</font>Billing</b></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Blank fragment</string>
    <string name="title_activity_create_purchase_return">CreatePurchaseReturnActivity</string>
    <string name="s_Inv_no">Inv No</string>
    <string name="s_invoice_no">Invoice No</string>
    <string name="s_date">Date</string>
    <string name="s_difference_amount">Difference Amount</string>
    <string name="s_gst">GST %</string>
    <string name="s_enter_gst">GST %</string>
    <string name="s_sgst">SGST Amount</string>
    <string name="s_enter_sgst">SGST</string>
    <string name="s_cgst">CGST Amount</string>
    <string name="s_enter_cgst">CGST</string>
    <string name="s_igst">IGST Amount</string>
    <string name="s_enter_igst">IGST</string>
    <string name="s_submit">SUBMIT</string>
    <string name="s_itc_eligibility">ITC Eligibility</string>

    <string-array name="choose_goods">
        <item>Input Goods</item>
        <item>Input Services</item>
        <item>Capital Goods</item>
        <item>None</item>
    </string-array>
</resources>
