<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lkintechnology.mBilling.activities.company.transaction.creditnotewoitem.AddCreditNoteItemActivity">
    <com.lkintechnology.mBilling.utils.BuzzTextView
        android:id="@+id/tv_ivn"
        style="@style/Gotham_Medium"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_invoice_no"
        android:textColor="#000"
        android:textSize="15sp"
        android:layout_marginLeft="@dimen/dp_12"/>
    <com.lkintechnology.mBilling.utils.BuzzEditText
        android:id="@+id/et_invoice"
        android:layout_below="@+id/tv_ivn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@drawable/bg_grey_stroke"
        android:hint="Invoice no"
        android:maxLength="13"
        android:inputType="number"
        android:textColor="#000"
        android:textSize="16sp"
        android:padding="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_10"
       android:layout_marginTop="@dimen/dp_4" />
   <com.lkintechnology.mBilling.utils.BuzzTextView
       android:id="@+id/tv_date"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/et_invoice"
       android:layout_marginTop="@dimen/dp_2"
       android:layout_marginLeft="@dimen/dp_12"
       android:text="@string/s_date"
       android:textSize="@dimen/sp_15"
       android:textColor="#000"/>
    <com.lkintechnology.mBilling.utils.BuzzTextView
        android:id="@+id/tv_date_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_date"
        android:layout_marginLeft="@dimen/dp_12"
        android:textColor="#000"
        android:textSize="16sp"
        android:padding="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_4"
        android:background="@drawable/bg_grey_stroke"
        android:drawableRight="@drawable/ic_date_range_black_24dp"/>
    <com.lkintechnology.mBilling.utils.BuzzTextView
        android:id="@+id/tv_difference_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_date_select"
        android:layout_marginTop="@dimen/dp_2"
        android:layout_marginLeft="@dimen/dp_12"
        android:text="@string/s_difference_amount"
        android:textSize="@dimen/sp_15"
        android:textColor="#000"/>
    <com.lkintechnology.mBilling.utils.BuzzEditText
        android:id="@+id/et_difference_amount"
        android:layout_below="@+id/tv_difference_amount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@drawable/bg_grey_stroke"
        android:maxLength="13"
        android:textColor="#000"
        android:textSize="16sp"
        android:padding="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_4"  />
    <com.lkintechnology.mBilling.utils.BuzzTextView
        android:id="@+id/tv_gst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_difference_amount"
        android:layout_marginTop="@dimen/dp_2"
        android:layout_marginLeft="@dimen/dp_12"
        android:text="@string/s_gst"
        android:textSize="@dimen/sp_15"
        android:textColor="#000"/>
    <com.lkintechnology.mBilling.utils.BuzzEditText
        android:id="@+id/et_gst"
        android:layout_below="@+id/tv_gst"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@drawable/bg_grey_stroke"
        android:maxLength="13"
        android:hint="@string/s_enter_gst"
        android:textColor="#000"
        android:textSize="16sp"
        android:padding="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_4"  />
    <com.lkintechnology.mBilling.utils.BuzzTextView
        android:id="@+id/tv_sgst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_gst"
        android:layout_marginTop="@dimen/dp_2"
        android:layout_marginLeft="@dimen/dp_12"
        android:text="@string/s_sgst"
        android:textSize="@dimen/sp_15"
        android:textColor="#000"/>
    <com.lkintechnology.mBilling.utils.BuzzEditText
        android:id="@+id/et_sgst"
        android:layout_below="@+id/tv_sgst"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@drawable/bg_grey_stroke"
        android:maxLength="13"
        android:hint="@string/s_enter_sgst"
        android:textColor="#000"
        android:textSize="16sp"
        android:padding="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_4"  />
    <com.lkintechnology.mBilling.utils.BuzzTextView
        android:id="@+id/tv_cgst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_sgst"
        android:layout_marginTop="@dimen/dp_2"
        android:layout_marginLeft="@dimen/dp_12"
        android:text="@string/s_cgst"
        android:textSize="@dimen/sp_15"
        android:textColor="#000"/>
    <com.lkintechnology.mBilling.utils.BuzzEditText
        android:id="@+id/et_cgst"
        android:layout_below="@+id/tv_cgst"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@drawable/bg_grey_stroke"
        android:maxLength="13"
        android:hint="@string/s_enter_cgst"
        android:textColor="#000"
        android:textSize="16sp"
        android:padding="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_4"  />
    <com.lkintechnology.mBilling.utils.BuzzTextView
        android:id="@+id/tv_igst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_cgst"
        android:layout_marginTop="@dimen/dp_2"
        android:layout_marginLeft="@dimen/dp_12"
        android:text="@string/s_igst"
        android:textSize="@dimen/sp_15"
        android:textColor="#000"/>
    <com.lkintechnology.mBilling.utils.BuzzEditText
        android:id="@+id/et_igst"
        android:layout_below="@+id/tv_igst"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@drawable/bg_grey_stroke"
        android:maxLength="13"
        android:hint="@string/s_enter_igst"
        android:textColor="#000"
        android:textSize="16sp"
        android:padding="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_4"  />
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/et_igst"
      android:layout_marginLeft="@dimen/dp_30"
       android:layout_marginRight="@dimen/dp_30"
       android:padding="@dimen/dp_10"
       android:background="@drawable/background_image_blue_gradient"
       android:text="@string/s_submit"
       android:textColor="@color/white"
       android:gravity="center"
       android:layout_marginTop="@dimen/dp_20"
       android:elevation="@dimen/dp_2"
      />

</RelativeLayout>
